--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ DB_DATABASE=simple-api
 DB_USERNAME=root
 DB_PASSWORD=root
 
-CACHE_DRIVER=memcached
-QUEUE_DRIVER=sync
+CACHE_DRIVER=array
+QUEUE_DRIVER=array
