--- a/.env
+++ b/.env
@@ -3,12 +3,7 @@ APP_DEBUG=true
 APP_KEY=
 APP_TIMEZONE=UTC
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=simple-api
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_CONNECTION=sqlite
 
 CACHE_DRIVER=array
 QUEUE_DRIVER=array
